# compact_bytes

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: ci.yml
compact_bytes/: Cargo.toml  README.md
compact_bytes/src/: fixed.rs  growable.rs  lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lib_fuzzer.rs
fuzz/src/: lib.rs
