[package]
name = "compact_bytes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
static_assertions = "1"

[dev-dependencies]
proptest = "1"
serde_json = "1"
test-case = "3"
test-strategy = "0.3"
