[package]
name = "compact_bytes-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.compact_bytes]
path = "../compact_bytes"

[[bin]]
name = "lib_fuzzer"
path = "fuzz_targets/lib_fuzzer.rs"
test = false
doc = false
