[package]
name = "compact_bytes-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = { version = "0.4", optional = true }
honggfuzz = { version = "0.5", optional = true }

[dependencies.compact_bytes]
path = "../compact_bytes"

[[bin]]
name = "lib_fuzzer"
path = "fuzz_targets/lib_fuzzer.rs"
test = false
doc = false
required-features = ["libfuzzer-sys"]

[[bin]]
name = "honggfuzz"
path = "src/bin/honggfuzz.rs"
test = false
doc = false
required-features = ["honggfuzz"]
